# stator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.rst  vagga.yaml
bench/: test1.ini
examples/: aio-http.py  alternative-graphiti.py  bench-tornado.py  carbon.py  http_asyncio.py  http_asyncio_redis.py  http_server.py  http_sync_redis.py  redis_asyncio.py  uwsgi-redis.py  uwsgi.py
src/: lib.rs
src/carbon/: ffi.rs  mod.rs
src/http/: ffi.rs  fsm.rs  mod.rs
src/inner/: eventfd.rs  ffi.rs  main.rs  manager.rs  mod.rs  start.rs
src/redis/: ffi.rs  mod.rs  receiver.rs
stator/: aio.py  carbon.py  http.py  lib.py  loop.py  redis.py  util.py
