[package]
name = "stator"
description = """
    A library that provides C API and dynamic library for rotor
"""
license = "MIT"
readme = "README.rst"
keywords = ["rotor", "c", "python"]
homepage = "http://github.com/tailhook/stator"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = "0.6.1"
rotor-http = {rev="175ea94", git="git://github.com/tailhook/rotor-http"}
rotor-carbon = "0.5.1"
rotor-dns = "0.4.0"
rotor-tools = "0.3.1"
lazy_static = "0.1.15"
cbor-codec = "0.4.2"

[dev-dependencies]
argparse = "0.2.1"

[lib]
name = "stator"
crate-type = ["dylib"]
